@@ -1,4 +1,3 @@
-
 package com.spark.config;
 
 import org.springframework.context.annotation.Bean;
@@ -9,11 +8,13 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -28,38 +29,52 @@ public class SecurityConfig {
     // CORS 설정
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("http://localhost:3000")); // 모든 origin 허용 (개발용)
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(true);
+    	  CorsConfiguration configuration = new CorsConfiguration();
+    	    configuration.setAllowedOrigins(List.of("http://localhost:3000"));  // 반드시 정확한 origin
+    	    configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+    	    configuration.setAllowedHeaders(List.of("*"));
+    	    configuration.setAllowCredentials(true);  // 쿠키 전송 허용
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-     
+    
     // Security Filter Chain
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // CORS 설정 적용
-            .csrf(csrf -> csrf.disable()) // CSRF 비활성화 (REST API용)
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .csrf(csrf -> csrf.disable())
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/join/**").permitAll()        // 기존 join 경로 허용
-                .requestMatchers("/auth/**").permitAll()    // 회원가입, 로그인 API 허용
+                // preflight OPTIONS 요청 허용
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                //  회원가입, 로그인, 홈, 기본 경로 허용
+                .requestMatchers("/auth/**", "/join/**", "/login", "/", "/home","/board/**").permitAll()
+
+                //  강의 리스트와 상세페이지는 모두에게 허용
+                .requestMatchers("/course/List", "/course/Detail").permitAll()
+
+                // ✅강사만 접근 가능한 영역
+                .requestMatchers("/course/teacher/**").hasRole("INSTRUCTOR")
+
+                //  나머지 course는 로그인만 되어 있으면 접근 가능
+                .requestMatchers("/course/**").authenticated()
+
+                //  동영상 업로드는 강사만
+                .requestMatchers("/video/upload").hasRole("INSTRUCTOR")
+
+                //  영상 전체 접근은 로그인 필요
+                .requestMatchers("/video/**").authenticated()
+
+                //  관리자 API 열어둠 (이건 테스트용 주의)
                 .requestMatchers("/api/admin/**").permitAll()
-                .requestMatchers(HttpMethod.GET, "/board/**").permitAll()
-                .requestMatchers(HttpMethod.POST, "/board/**").permitAll() 
-                .requestMatchers(HttpMethod.PUT, "/board/**").permitAll()
-                .requestMatchers(HttpMethod.DELETE, "/board/**").permitAll()
-                .requestMatchers("/", "/home", "/login").permitAll() // 기본 페이지들 허용
-                .requestMatchers(HttpMethod.OPTIONS, "/course/**", "/course/**/**").permitAll() // OPTIONS 메서드 허용
-                
-                .requestMatchers("/course/**").permitAll()
-                .anyRequest().authenticated()               // 나머지는 인증 필요
+
+                // 나머지는 인증 필요
+                .anyRequest().authenticated()
             );
-        
+
         return http.build();
     }
 }
